--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,16 +4,16 @@
 
 @layer base {
   h1 {
-    @apply text-3xl font-bold;
+    @apply text-3xl font-bold mb-4;
   }
   h2 {
-    @apply text-2xl font-bold;
+    @apply text-2xl font-bold mb-3;
   }
   h3 {
-    @apply text-lg font-semibold;
+    @apply text-lg font-semibold mb-2;
   }
   h4 {
-    @apply text-base;
+    @apply text-base mb-1;
   }
   h5 {
     @apply text-sm;
