--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   h1 {
     @apply text-3xl font-bold mb-4;
@@ -23,6 +27,9 @@
   }
 }
 
-html {
-  scroll-behavior: smooth;  
+@media screen and (min-width: 800px) {
+  .h-nav[data-active="true"] {
+    box-shadow: 0 4px 10px rgba(71, 73, 75, 0.5);
+    @apply w-full fixed top-0 duration-300;
+  }
 }
