--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,10 +29,11 @@ html {
 
 @media screen and (max-width: 767px) {
   .m-nav[data-active="false"] {
-    @apply w-full fixed bottom-0;
-  }
-  .m-nav[data-active="true"] {
     @apply w-full fixed bottom-0 duration-300;
+  }
+
+  .m-nav[data-active="true"] {
+    @apply w-full fixed bottom-0 duration-300 overflow-x-clip;
   }
 
   .theme-toggle {
